@@ -207,6 +207,7 @@ this. Was used when mwEmbed was going to be an extension.
 * Added $wgShowDBErrorBacktrace, to allow users to easily gather backtraces for
   database connection and query errors.
 * (bug 19646) New hook: ImgAuthBeforeStream for tests and functionality before file is streamed to user, but only when using img_auth
+* Show change block / unblock link on Special:Contributions if user is blocked
 
 === Bug fixes in 1.16 ===
 
